fix z-index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,7 +35,7 @@ table tr td {
   left: 0;
   width: 100%;
   margin-bottom: 0;
-  background-color: #f8f9fa;
+  z-index: 9999;
 }
 
 .app-wrapper {
